--- a/css/style.css
+++ b/css/style.css
@@ -537,13 +537,13 @@ img {
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   padding: 8px 16px;
   color: #fff;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
 }
 
 .footer-input::placeholder {
   font-family: "Roboto", sans-serif;
-  font-size: 12px;
-  line-height: 2;
-  letter-spacing: 0.04em;
   color: #fff;
 }
 .footer-btn {
@@ -552,18 +552,18 @@ img {
   justify-content: center;
   flex-direction: row;
   border-radius: 4px;
-  width: 165px;
+  min-width: 165px;
   height: 40px;
   background: #4d5ae5;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
+  cursor: pointer;
   letter-spacing: 0.04em;
   color: #fff;
   border: none;
   padding: 8px 24px;
-  gap: 16px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -573,6 +573,7 @@ img {
 }
 .send-icon {
   fill: #fff;
+  margin-left: 16px;
 }
 
 /* Modal-general */
@@ -584,9 +585,6 @@ img {
   width: 100%;
   height: 100%;
   background-color: rgba(46, 47, 66, 0.4);
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
   opacity: 0;
@@ -631,19 +629,21 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 0;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-close-black {
-  fill: #2e2f42;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .close-btn:hover,
 .close-btn:focus {
   background-color: #404bbf;
-}
-
-.icon-close-black:hover {
-  fill: #fff;
+  border: none;
+  fill: #ffffff;
 }
 
 .form-title {
@@ -666,9 +666,11 @@ img {
 .form-label {
   font-family: "Roboto", sans-serif;
   font-size: 12px;
-  line-height: 1.16667;
   letter-spacing: 0.04em;
+  line-height: 1.17;
   color: #8e8f99;
+  display: block;
+  margin-bottom: 4px;
 }
 
 .input-wrapper {
@@ -677,16 +679,17 @@ img {
 
 .form-input {
   width: 100%;
-  height: 58px;
+  height: 40px;
   border-radius: 4px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   padding-left: 38px;
-  padding-right: 16px;
   font-family: "Roboto", sans-serif;
   font-size: 12px;
   line-height: 2;
   letter-spacing: 0.04em;
+  background-color: transparent;
   outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-input:focus {
@@ -703,6 +706,11 @@ img {
   left: 16px;
   top: 50%;
   transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.text-area-field {
+  margin-bottom: 16px;
 }
 
 .modal-textarea {
@@ -713,26 +721,27 @@ img {
   padding: 8px 16px;
   font-family: "Roboto", sans-serif;
   font-size: 12px;
-  line-height: 2;
-  letter-spacing: 0.04em;
-  outline: transparent;
-  resize: none;
-  margin-bottom: 16px;
-}
-
-.modal-textarea::placeholder {
-  font-family: "Roboto", sans-serif;
-  font-size: 12px;
-  line-height: 1.16667;
+  line-height: 1.17;
   letter-spacing: 0.04em;
   color: rgba(46, 47, 66, 0.4);
-  padding-top: 8px;
+  background-color: transparent;
+  outline: transparent;
+  resize: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-textarea:focus {
+  border-color: #4d5ae5;
+}
+
+.checkbox-field {
+  margin-bottom: 24px;
 }
 
 .modal-check-text {
   font-family: "Roboto", sans-serif;
   font-size: 12px;
-  line-height: 1.16667;
+  line-height: 1.17;
   letter-spacing: 0.04em;
   color: #8e8f99;
   display: flex;
@@ -744,8 +753,11 @@ img {
   border: 1px solid rgba(46, 47, 66, 0.4);
   width: 16px;
   height: 16px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   margin-right: 8px;
-  display: flex;
+  display: inline-flex;
   align-items: center;
   justify-content: center;
   fill: transparent;
@@ -755,21 +767,30 @@ img {
   background-color: rgb(64, 75, 191);
   border: 1px solid rgb(64, 75, 191);
   fill: #f4f4fd;
+  border: none;
 }
 
 .modal-btn {
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
+  cursor: pointer;
   border-radius: 4px;
   padding: 16px 32px;
-  width: 169px;
+  min-width: 169px;
   height: 56px;
   display: block;
   margin: 0 auto;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   background-color: #4d5ae5;
   border: none;
-  color: #fff;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .privacy-link {
   margin-left: 3px;
+  color: #4d5ae5;
 }
