--- a/css/style.css
+++ b/css/style.css
@@ -744,8 +744,6 @@ img {
   line-height: 1.17;
   letter-spacing: 0.04em;
   color: #8e8f99;
-  display: flex;
-  align-items: center;
 }
 
 .modal-check-item {
@@ -756,9 +754,8 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  margin-right: 8px;
-
   display: inline-flex;
+  margin-right: 8px;
   align-items: center;
   justify-content: center;
   fill: transparent;
@@ -794,4 +791,5 @@ img {
 .privacy-link {
   margin-left: 3px;
   color: #4d5ae5;
+  text-decoration: underline;
 }
